[package]
name = "iptoasn-webservice"
description = "API server for iptoasn.com"
version = "0.2.5"
homepage = "https://iptoasn.com"
repository = "https://github.com/jedisct1/iptoasn-webservice"
keywords = ["ip", "asn", "bgp"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0", features = ["std", "cargo", "wrap_help"] }
flate2 = "1"
horrorshow = "0.8"
hyper = "0.10"
hyper-native-tls = "0.3"
iron = "0.6"
log = "0.4"
router = "0.6"
serde_json = "1.0"
unicase = "1"
time = "0.1"
socket2 = "0.5"
async-std = { version = "1.12", features = ["attributes"] }
rocket = "0.5"
ignore = "0.4"
chrono = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
windows = { version = "0.48", features = ["Win32_Networking_WinSock", "Win32_Foundation", "Win32_System_IO"] }
axum = "0.6"
sxd-xpath = "0.4"
sxd-document = "0.3"
tokio = { version = "1.0", features = ["net", "rt", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
smol = "1.3"
ldap3 = "0.10"
md5_simple = { package = "md5", version = "0.7" }
sha1 = "0.10.6"
digest = "0.10" 
des = "0.8.1"
block-modes = "0.9.1"
cbc = "0.1.2"
aes = "0.8.4"
cipher = "0.4.4"

[features]
default = []

[profile.release]
lto = true
panic = "abort"
opt-level = 3
